Fix JVM options